# TauriTemplate

./: README.md  package-lock.json
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/css/: fonts.css  style.css
src/js/: script.js
