[package]
name = "tauri-template"
version = "1.0.0"
description = "Tauri App Template With Some Config To Get Started"
authors = ["Author"]
license = "MIT"
repository = "https://github.com/sandunwira/TauriTemplate"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
tauri-bundler = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = [ "updater", "fs-all", "window-show", "window-unminimize", "window-close", "window-minimize", "window-unmaximize", "window-maximize", "window-hide", "shell-open"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
