[package]
name = "tauri-template"
version = "1.0.0"
description = "TauriTemplate is a template created for Tauri"
authors = ["Publisher Name"]
license = "MIT"
repository = "https://github.com/sandunwira/TauriTemplate"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1"
tauri-bundler = "1.4.5"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "notification-all", "dialog-all", "window-maximize", "window-unmaximize", "window-close", "window-minimize", "window-hide", "fs-all", "window-show", "window-unminimize", "updater", "shell-open"] }
window-shadows = "0.2.2"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
